Fixed scrollbar & header layers

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,7 @@
 	right: 0;
 	z-index: 10;
 	background: transparent;
+	width: 99.6%;
 }
 
 .location {
